# cashflow

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.local  Pipfile  Procfile  README.md  compose.yaml  conftest.py  docker-compose.yaml  flake.nix  job.nomad.hcl  manage.py  nginx.conf  package.json  pyproject.toml  requirements.txt  run.sh  supervisord.conf  supervisord.dev.conf
.github/workflows/: deploy.yml
accounting/: permissions.py
admin/: urls.py  views.py
admin/views/: __init__.py  fortnox.py  views.py
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  run.sh
backend/admin/: urls.py
backend/cashflow/: asgi.py  dauth.py  gordian.py  rfinger.py  settings.py  settings_test.py  tests.py  urls.py  utils.py  wsgi.py
backend/core/: apps.py  exceptions.py  files.py  permissions.py  search.py  tests.py
backend/expenses/: factories.py  models.py  search.py  tests.py  urls.py
backend/file_api/: apps.py
backend/fortnox/: __init__.py  tests.py  urls.py  views.py
backend/invoices/: factories.py  models.py  search.py
backend/iso20022/: apps.py  handelsbanken.py  models.py  tests.py
backend/staticfiles/: account.js  style.css  vue.js
backend/stats/: views.py
backend/templates/: detail.html  email.html  index.html  main.html
backend/users/: pictures.py  tests.py  views.py
base/: models.py
base/migrations/: 0001_initial.py
budget/: admin.py  api_views.py  models.py  urls.py  views.py
budget/migrations/: 0001_initial.py  0002_auto_20170724_1901.py
cashflow/: __init__.py  apps.py  asgi.py  authviews.py  dauth.py  email.py  email_util.py  exceptions.py  fortnox.py  gordian.py  middleware.py  rfinger.py  settings.py  settings_test.py  snapshots.py  tests.py  urls.py  utils.py  wsgi.py
cashflow/api/: pagination.py  serializers.py  urls.py  views.py
cashflow/templatetags/: text.py
core/: exceptions.py  factories.py  tests.py
core/api/: exceptions.py  filters.py  openapi.py  pagination.py  problems.py  serializers.py  urls.py  views.py
docs/explanations/: apps.md  authentication-flow.md
docs/how-tos/: update-dependencies.md
expenses/: admin.py  bookkeeperviews.py  commentviews.py  consumers.py  cron.py  csrfexemptauth.py  custom_storages.py  expenseviews.py  factories.py  forms.py  index.py  misc_views.py  models.py  payviews.py  routing.py  tests.py  urls.py  views.py
expenses/api/: exceptions.py  serializers.py  urls.py  views.py
expenses/api_views/: accounting.py  attest.py  comment.py  expense.py  file.py  misc.py  pay.py  user.py
expenses/fixtures/: demo_data.json
expenses/human_views/: action.py  expense.py  expense_part.py  general.py  payment.py  stats.py  user.py
expenses/migrations/: 0001_initial.py  0001_squashed_0001_squashed_0011_auto_20170803_0432.py  0001_squashed_0011_auto_20170803_0432.py  0002_auto_20170313_1910.py  0002_comment_invoice_file_invoice.py  0003_auto_20170319_1134.py  0004_auto_20170708_2038.py  0005_auto_20170714_1003.py  0006_expense_created_date.py  0007_auto_20170717_2227.py  0008_remove_payment_amount.py  0009_auto_20170720_1612.py  0010_auto_20170803_0408.py  0011_auto_20170803_0432.py  0014_auto_20171101_1605.py  0015_remove_expensepart_budget_line_id.py  0017_expense_confirmed_by.py  0018_expense_confirmed_at.py  0019_auto_20171223_1558.py  0020_auto_20171223_1558.py  0021_auto_20171224_2321.py  0022_auto_20180817_0212.py  0022_auto_20240125_1843.py  0023_auto_20180817_0212.py  0023_expense_is_digital.py  0024_auto_20180817_0212.py  0024_auto_20240516_1926.py  0025_auto_20180817_0212.py  0025_expense_flagged.py  0025_expense_is_flagged.py  0025_fortnoxaccounts_fortnoxauthtoken.py  0025_fortnoxauthtoken.py  0026_alter_payment_account.py  0026_fortnoxaccounts.py  0026_merge_20180817_0215.py  0026_merge_20260123_1744.py  0027_delete_fortnoxaccounts_delete_fortnoxauthtoken_and_more.py  0027_remove_bankaccount.py  0028_alter_expensepart_expense.py  0028_remove_expense_is_digital_and_more.py  (+2 more)
expenses/templatetags/: admin_counts.py  settings.py
expenses/views/: accounting.py  attest.py  comment.py  expense.py  file.py  misc.py  pay.py  user.py
file_api/: apps.py  models.py  urls.py  views.py
fortnox/: __init__.py  api.py  apps.py  django.py  exceptions.py  models.py  tests.py
fortnox/api/: serializers.py  urls.py  views.py
fortnox/api_client/: __init__.py  client.py  exceptions.py  models.py
fortnox/migrations/: 0001_initial.py  0002_alter_apiuser_name.py  0002_apitokens_delete_authtoken.py  0002_rename_apiuser_serviceaccount_delete_account.py  0003_apiuser_expires_at.py
frontend/: README.md  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts  index.ts
frontend/static/: manifest.json
invoices/: factories.py  forms.py  models.py  tests.py  urls.py  views.py
invoices/api/: exceptions.py  serializers.py  tests.py  urls.py  views.py
invoices/migrations/: 0001_initial.py  0002_auto_20171224_2345.py  (+6 more)
public/: index.html
src/: App.js  Dashboard.js  Expense.js  Expenses.js  index.css  index.js
static/: package.json  style.css
staticfiles/: manifest.json  style.css
stats/: urls.py  views.py
templates/: 403.html  404.html  email.html  index.html  main.html  remove_invoice_email.html
users/: serializers.py  tests.py  urls.py  views.py
(+310 files in other folders)
