[project]
name = "cashflow"
version = "2.0"
description = ""
authors = [
	{name = "Alexander Viklund", email = "viklu@kth.se"},
	{name = "Mauritz Zachrisson", email="mauritzz@kth.se"}
]
package-mode = false
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "django-widget-tweaks (>=1.5.1,<2.0.0)",
    "dj-database-url (>=3.1.0,<4.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "pi-heif (>=1.1.1,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "authlib (>=1.6.9,<2.0.0)",
    "legacy-cgi (>=2.6.4,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "setuptools (>=82.0.0,<83.0.0)",
    "boto3 (>=1.42.63,<2.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "djangorestframework-stubs (>=3.16.8,<4.0.0)",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cashflow.settings_test"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-extensions",
    "pytest (>=9.0.3,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]
