[project]
name = "cashflow"
version = "2.0"
description = ""
authors = [
	{name = "Alexander Viklund", email = "viklu@kth.se"},
	{name = "Mauritz Zachrisson", email="mauritzz@kth.se"}
]
package-mode = false
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "django-widget-tweaks (>=1.5.1,<2.0.0)",
    "dj-database-url (>=3.1.0,<4.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "pi-heif (>=1.1.1,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "legacy-cgi (>=2.6.4,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "setuptools (>=82.0.0,<83.0.0)",
    "boto3 (>=1.42.63,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "mozilla-django-oidc (>=5.0.2,<6.0.0)",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cashflow.settings_test"
python_files = ["tests.py", "test_*.py", "*_test.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-extensions",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "drf-problems (>=1.0.5,<2.0.0)",
    "mypy (>=1.18,<2.0)",
    "django-stubs (>=6.0,<7.0)",
    "djangorestframework-stubs (>=3.17,<4.0)",
    "types-requests",
    "hypothesis (>=6.155.2,<7.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.14"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = ["^.*/migrations/.*$"]

[tool.django-stubs]
django_settings_module = "cashflow.settings"
