[project]
name = "cashflow"
version = "2.0"
description = ""
authors = [
	{name = "Alexander Viklund", email = "viklu@kth.se"},
	{name = "Mauritz Zachrisson", email="mauritzz@kth.se"}
]
package-mode = false
readme = "README.md"
requires-python = "==3.14.4"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "requests (>=2.34.1,<3.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "django-widget-tweaks (>=1.5.1,<2.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "pi-heif (>=1.3.0,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "authlib (>=1.7.2,<2.0.0)",
    "legacy-cgi (>=2.6.4,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "setuptools (>=82.0.1,<83.0.0)",
    "boto3 (>=1.43.7,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "certifi (>=2026.4.22,<2027.0.0)",
    "charset-normalizer (>=3.4.7,<4.0.0)",
    "click (>=8.3.3,<9.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "idna (>=3.15,<4.0)",
    "packaging (>=26.2,<27.0)",
    "tzdata (>=2026.2,<2027.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
    "wcwidth (>=0.7.0,<0.8.0)"
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cashflow.settings_test"
python_files = ["tests.py", "test_*.py", "*_test.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-extensions",
    "pytest (>=9.0.3,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "djangorestframework-stubs (>=3.16.8,<4.0.0)",
    "drf-problems (>=1.0.5,<2.0.0)",
]
